--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: arial,sans-serif;
+    text-align: center;
 }
 
 a {
@@ -36,15 +37,16 @@ header li {
 
 /* Search box section */
 #search {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
+    display: block;
+    margin: 0 auto;
+    
+    
 }
 
 #searchbox {
     width: 25em;
-    margin:15px 200px 30px 200px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 /* Google search button */
 #button1 {
@@ -54,6 +56,7 @@ header li {
     background-color: #f8f9fa;
     color: #3c4043;
     font-size: 14px;
+
 }
 
 /* Offered language section */
