--- a/style/style.css
+++ b/style/style.css
@@ -45,18 +45,35 @@ header li {
     margin-top: 25%;
 }
 
+}
 /* Search box section */
 #search {
     display: block;
-    margin: 0 auto;
-    
-    
+    margin: 0 auto;   
+}
+
+#mic_icon {
+    position: absolute;
+    padding: 25px 50px 50px 300px;
 }
 
 #searchbox {
+    position: relative;
     width: 25em;
+    height: 30px;;
     margin-top: 20px;
     margin-bottom: 20px;
+    border-radius: 20px;
+    border:none;
+    color: rgba(0,0,0,.87);
+    box-shadow: 0 0 2px rgb(114, 111, 111);
+    /* This is how to put img inside Searchbox */
+    background: transparent url(/image/search_black.png)left no-repeat;
+    padding-left: 20px;
+}
+#searchbox:hover {
+    box-shadow: 0 0 5px rgb(114, 111, 111);
+
 }
 /* Google search button */
 #button1 {
@@ -66,7 +83,16 @@ header li {
     background-color: #f8f9fa;
     color: #3c4043;
     font-size: 14px;
+    border: none;   
+    border-radius: 7%;
+    text-decoration: none;
+    padding: 10px 10px;
+    cursor: pointer;
 
+
+}
+button:hover {
+    box-shadow: 0 0 2px #222;
 }
 
 /* Offered language section */
@@ -74,6 +100,7 @@ header li {
     display: flex;
     justify-content: center;
     margin-top: 10px;
+    margin-bottom: 100px;;
     font-size: small;
     color: #222;
 }
